# ask-to-database

./: README.md  README_zh.md  package.oo.yaml  pyproject.toml  requirements.txt
flows/ask/: .flow.ui.oo.json  flow.oo.yaml
flows/ask/scriptlets/: +python#1.py  +python#2.py
flows/delete_training_data/: .flow.ui.oo.json  flow.oo.yaml
flows/train/: .flow.ui.oo.json  flow.oo.yaml
tasks/ask_to_database/: __init__.py  task.oo.yaml
tasks/delete_training_data/: __init__.py  task.oo.yaml
tasks/train_by_mysql/: __init__.py  task.oo.yaml
