[project]
name = "ask-to-database"
version = "0.1.0"
description = ""
authors = [
    {name = "a1528zhang",email = "beingszhang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaleido (==0.2.1)",
    "vanna (>=0.7.9,<0.8.0)",
    "openai (>=1.84.0,<2.0.0)",
    "cryptography (>=45.0.3,<46.0.0)",
    "chromadb (>=1.0.12,<2.0.0)",
    "pymysql (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
